    the disk containing it is still offered for partitioning (LP: #347916).
  * On armel, DEB_HOST_ARCH=armel but DEB_HOST_ARCH_CPU=arm. Check
    DEB_HOST_ARCH rather than DEB_HOST_ARCH_CPU.
  * Use the full size of the underlying images for the timezone map if the
    screen is big enough.
  * Install chroot-setup.sh and in-target from debian-installer-utils
    (LP: #353941).

  [ Mario Limonciello ]
  * Make sure mythbuntu installs have users installed into the 'video'
    group. (LP: #351773)

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 01 Apr 2009 13:33:12 +0100

ubiquity (1.12.1) jaunty; urgency=low

  * Refactor architecture/subarchitecture detection slightly.
  * First pass at flash-kernel integration for armel (LP: #345534).
  * Fix yes/no question text in weak-password warning (LP: #352348).
  * Update translations from Launchpad.
  * Automatic update of included source packages: base-installer
    1.98ubuntu5, flash-kernel 2.13ubuntu5, partman-partitioning 65ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Mar 2009 23:19:19 +0100

ubiquity (1.12.0) jaunty; urgency=low

  [ Colin Watson ]
  * Update for new message context system in GTK+ 2.15.1, and update
    imported translations from gtk+2.0 2.16.0-1ubuntu2.
  * Stop setting message attribute in InstallStepError; it isn't used and it
    generates a deprecation warning with Python 2.6. Similarly, rename
    PartedServerError's message attribute to parted_error.
  * Always set auto-login for OEM installations.
  * KDE frontend:
    - Hide auto-login and require-password radio buttons for OEM
      installations.
  * Remove reimplementation of gdm and kdm auto-login support for OEM
    installations, since user-setup handles this now and the duplication
    causes oem-config to be unable to undo autologin (LP: #347900).
  * Fix ubiquity/install_bootloader handling (LP: #348660):
    - Check the seen flag rather its value when deciding whether to override
      it with the UI's value.